# neural_transport

./: .gitignore  LICENSE  README.md  pyproject.toml
neural_transport/: __init__.py  datamodule.py  litmodule.py
neural_transport/datasets/: cams_forecast.py  carbontracker.py  carboscope.py  common.py  egg4.py  grids.py  obspack.py  solar_radiation.py  vars.py
neural_transport/inference/: analyse.py  benchmark.py  forecast.py  plot_results.py
neural_transport/models/: __init__.py  hybridsfno.py  layers.py  regulargrid.py  sfno.py  sfno_v2.py  swintransformer.py  unet.py
neural_transport/models/gnn/: gnn.py  graphcast.py  mesh.py
neural_transport/tools/: conversion.py  loss.py  metrics.py  obspack_helper.py  plot.py  xarray_helper.py
neural_transport/training/: __init__.py  train.py
