[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "neural_transport"
authors = [
    {name = "Vitus Benson", email = "vbenson@bgc-jena.mpg.de"},
]
requires-python = ">=3.10"
version = "0.0.1"
dependencies = [
    "numpy",
    "xarray",
    "dask",
    "ecmwf-api-client",
    "tqdm",
    "xesmf",
    "cdo",
    "numcodecs",
    "zarr",
    "pandas",
    "xskillscore",
    "tensorboard",
    "torch",
    "cartopy",
    "matplotlib",
    "seaborn",
    "xrft",
    "xmovie",
    "torch_geometric",
    "scipy",
    "trimesh",
    "torch_advection",
    "tensorly",
    "torch_harmonics",
    "timm",
    "einops",
    "pyarrow",
]

[tool.setuptools.packages.find]
include = ["neural_transport"]
exclude = ["experiments*"]